# MultiGrip

./: Cargo.toml  LICENSE  README.md  build.rs
src/: algorithm.rs  config.rs  event.rs  main.rs  slint_comp.rs
src/driver/: st7789.rs
ui/: menu.slint  multigrip.slint  theme.slint  watch.slint
