[package]
name = "multigrip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Before releasing in Embassy repository, you need to solve the dependency issues by yourself.
embassy-sync = { version = "0.1.0", path = "C:/Users/Multy/Desktop/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "C:/Users/Multy/Desktop/embassy/embassy-executor", features = ["defmt", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "C:/Users/Multy/Desktop/embassy/embassy-time", features = ["defmt", "nightly"] }
embassy-stm32 = { version = "0.1.0", path = "C:/Users/Multy/Desktop/embassy/embassy-stm32", features = ["unstable-pac","nightly", "exti", "defmt", "stm32f429zi", "memory-x", "time-driver-any"]  }
embassy-futures = { version = "0.1.0", path = "C:/Users/Multy/Desktop/embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
alloc-cortex-m = "0.4.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-graphics = "0.7"

[profile.dev]
opt-level = "s"

[dependencies.slint]
version = "0.3.5"
default-features = false
features = ["compat-0-3-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
slint-build = "0.3.5"